objects/License_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id_Formula__c</fullName>
        <formula>Account__r.Id</formula>
        <label>Account Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Siebel_ID__c</fullName>
        <label>Account Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>License_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre 2002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Current_Quantity__c</fullName>
        <label>Maintenance Current Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Oct_2002_Qty__c</fullName>
        <label>Post_Oct_2002_Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Oct_2002_Qty__c</fullName>
        <label>Pre_Oct_2002_Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>License_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_Qty__c</fullName>
        <label>Resolved Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <label>SAP Material Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Count__c</fullName>
        <label>Total Adjusted Count</label>
        <summarizedField>Entitlement_Adjustment_History__c.Adjustment_Count__c</summarizedField>
        <summaryForeignKey>Entitlement_Adjustment_History__c.License_Audit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Total_Adjusted_Count__c + Pre_Oct_2002_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Entitlement Adjustment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>License Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Adjustment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>